# Camara-nueva

./: MediaStorageManager.kt  README.md  build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle  verify.sh
.github/workflows/: android.yml  android.yml.  android_ci.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/rodyto/lenspro/: ActionChipBar.kt  AutoFitSurfaceView.kt  BlurredBackdrop.kt  CameraCaptureEngine.kt  CameraControlViewModel.kt  CameraControlViewModelCore.kt  CameraControlViewModelOps.kt  CameraControlViewModelState.kt  CameraEnums.kt  CameraPreview.kt  CameraTuning.kt  CameraXBridge.kt  GalleryLauncher.kt  GlassUi.kt  HistogramComputer.kt  HistogramView.kt  HorizonLevel.kt  IconsKit.kt  LensProTheme.kt  LensSelector.kt  LiquidGlass.kt  MainActivity.kt  MainActivityCore.kt  MainActivityHelpers.kt  MainActivityOverlays.kt  MediaStorageManager.kt  MultiChannelImageReader.kt  SamsungVendorTags.kt  SettingsActivity.kt  SettingsRepository.kt  ShutterBlink.kt  ShutterButtonPro.kt  ShutterFx.kt  Spring26.kt  VideoBitrateCalculator.kt  ZoomControl.kt  ZoomDial.kt
app/src/main/java/com/rodyto/lenspro/camera/: CameraCaptureEngine.kt  CameraSessionController.kt  VideoRecordingController.kt
app/src/main/java/com/rodyto/lenspro/capture/: MediaStorageManager.kt  VideoBitrateCalculator.kt
app/src/main/java/com/rodyto/lenspro/settings/: SettingsBridge.kt  SettingsRepository.kt
app/src/main/java/com/rodyto/lenspro/tuning/: CameraTuning.kt
app/src/main/java/com/rodyto/lenspro/ui/: CameraUiStateHolder.kt
app/src/main/java/com/rodyto/lenspro/ui/components/: AutoFitSurfaceView.kt  BlurredBackdrop.kt  GlassUi.kt  IconsKit.kt  LiquidGlass.kt  QuickSettingsIsland.kt  ZoomDial.kt
app/src/main/java/com/rodyto/lenspro/ui/overlays/: PreviewOverlays.kt  ShutterBlink.kt
app/src/main/java/com/rodyto/lenspro/ui/theme/: LensProTheme.kt
app/src/main/java/com/rodyto/lenspro/util/: Haptics.kt  HistogramComputer.kt  Spring26.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/mipmap-xhdpi/: lala
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-nitght/: themes.xml
app/src/main/res/values/values-night/: themes.xm  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml
github/workflows/: android.yml
gradle/wrapper/: gradle-wrapper.properties
